--- a/Program-Construction-RPG/nbproject/project.properties
+++ b/Program-Construction-RPG/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Program-Construction-RPG
-main.class=program.construction.rpg.ProgramConstructionRPG
+main.class=program.construction.rpg.TitleScreen
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
